<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_Matricule" />

        <EditText
            android:id="@+id/etMatricule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_MDP" />

        <EditText
            android:id="@+id/etMDP"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bValider"
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_gravity="left"
                android:text="@string/btn_Valider"
                android:onClick="valide"/>

            <Button
                android:id="@+id/bAnnuler"
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="left"
                android:text="@string/btn_Annuler"
                android:visibility="visible"
                android:onClick="annule"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
