<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <DatePicker
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/rechercher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/datePicker1"
                android:layout_marginLeft="100dp"
                android:text="@string/rechercher" />
        </LinearLayout>

        <Button
            android:id="@+id/seDeconnecter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="seDeconnecter"
            android:text="@string/deconnection" />
        <Button
            android:id="@+id/retour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="retour"
            android:text="@string/retour" />
    </LinearLayout>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>